# spaceindex

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: push.yml
ci/: setup.sh  test.sh
ci/travis/: test.sh
examples/: basic.rs  big_tree.rs  boxes.rs
pyspaceindex/: Cargo.toml
pyspaceindex/src/: lib.rs
pyspaceindex/tests/: test_rtree.py
spaceindex/: Cargo.toml
spaceindex-py/: Cargo.toml  README.md
spaceindex-py/src/: lib.rs
spaceindex/examples/: basic.rs  big_tree.rs  boxes.rs  lots_of_little_boxes.rs
spaceindex/src/: lib.rs
spaceindex/src/geometry/: region.rs  shape.rs  tests.rs
spaceindex/src/rtree/: mod.rs  node.rs  tests.rs
spaceindex/src/rtree/rendering/: graphviz.rs  image.rs  mod.rs
src/: lib.rs  main.rs
src/geometry/: line_segment.rs  mod.rs  point.rs  region.rs  shape.rs  tests.rs
src/rtree/: mod.rs  node.rs
src/rtree/rendering/: graphviz.rs  image.rs
