[package]
name = "spaceindex"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
description = "spaceindex"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/spaceindex"

[dependencies]
thiserror = "1.0"
generational-arena = "0.2"