[package]
name = "spaceindex-py"
version = "0.4.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2021"
description = "spaceindex pythony module"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/spaceindex"

[lib]
name = "pyspaceindex"
crate-type = ["cdylib"]

[dependencies.spaceindex]
version = "0.4.0"
path = "../spaceindex"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]